# TagWriter

./: .env.sample  .gitattributes  .gitignore  CHANGELOG.md  README.md  README_en.md  README_ja.md  environment.yml  main.spec  pyproject.toml  sample.yaml
docs/: editor.md  getstart.md
tagwriting/: config_builder.py  file_change_handler.py  html_client.py  llm_simple_client.py  main.py  utils.py
tests/: include_testdata.md  test_main.py
