[project]
name = "tagwriting"
version = "0.2.2.0"
description = "A CLI tool for tag-based text processing."
authors = [
    { name = "esehara", email = "esehara@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "click",
    "rich",
    "readchar",
    "watchdog",
    "openai",
    "python-dotenv",
    "pyyaml",
    "requests"
]

[project.scripts]
tagwriting = "tagwriting.main:main"

[tool.setuptools]
packages = ["tagwriting"]
